# ComfyUI-DownloadFile

./: README.md  __init__.py  pyproject.toml  requirements.txt
download_nodes/: __init__.py  downloader.py
